// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/accounts DELETE /:accountId/logo should return account with logo as null 1`] = `
Object {
  "entities": Object {
    "accounts": Object {
      "62954241-3652-4792-bae5-5bfed53d37b7": Object {
        "EnterpriseId": null,
        "address": "62954242-3652-4792-bae5-5bfed53d37b7",
        "addressId": "62954242-3652-4792-bae5-5bfed53d37b7",
        "bookingWidgetPrimaryColor": null,
        "bumpInterval": "2 weeks",
        "callrailId": null,
        "canSendRecalls": false,
        "canSendReminders": false,
        "canSendReviews": false,
        "clinicName": null,
        "contactEmail": null,
        "destinationPhoneNumber": "+16041234567",
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "facebookUrl": null,
        "fullLogoUrl": null,
        "googlePlaceId": null,
        "hygieneInterval": "6 months",
        "id": "62954241-3652-4792-bae5-5bfed53d37b7",
        "lastSyncDate": null,
        "logo": null,
        "massOnlineEmailSentDate": null,
        "name": "Test Account",
        "omitChairIds": Array [],
        "omitPractitionerIds": Array [],
        "phoneNumber": null,
        "recallBuffer": "1 days",
        "recallEndTime": "20:00:00",
        "recallInterval": "6 months",
        "recallStartTime": "17:00:00",
        "reviewsInterval": "15 minutes",
        "sendRequestEmail": true,
        "sendUnconfirmedReviews": false,
        "suggestedChairId": null,
        "syncClientAdapter": null,
        "timeInterval": 30,
        "timezone": "America/Vancouver",
        "twilioPhoneNumber": "+16043333333",
        "unit": 15,
        "vendastaAccountId": null,
        "vendastaId": null,
        "vendastaMsId": null,
        "vendastaSrId": null,
        "website": null,
        "weeklyScheduleId": null,
      },
    },
    "addresses": Object {
      "62954242-3652-4792-bae5-5bfed53d37b7": Object {
        "city": null,
        "country": "CA",
        "id": "62954242-3652-4792-bae5-5bfed53d37b7",
        "state": null,
        "street": null,
        "timezone": null,
        "zipCode": null,
      },
    },
  },
  "result": "62954241-3652-4792-bae5-5bfed53d37b7",
}
`;

exports[`/api/accounts GET / with manager role so only return one 1`] = `
Object {
  "entities": Object {
    "accounts": Object {
      "62954241-3652-4792-bae5-5bfed53d37b7": Object {
        "EnterpriseId": null,
        "address": "62954242-3652-4792-bae5-5bfed53d37b7",
        "addressId": "62954242-3652-4792-bae5-5bfed53d37b7",
        "bookingWidgetPrimaryColor": null,
        "bumpInterval": "2 weeks",
        "callrailId": null,
        "canSendRecalls": false,
        "canSendReminders": false,
        "canSendReviews": false,
        "clinicName": null,
        "contactEmail": null,
        "destinationPhoneNumber": "+16041234567",
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "facebookUrl": null,
        "fullLogoUrl": null,
        "googlePlaceId": null,
        "hygieneInterval": "6 months",
        "id": "62954241-3652-4792-bae5-5bfed53d37b7",
        "lastSyncDate": null,
        "logo": null,
        "massOnlineEmailSentDate": null,
        "name": "Test Account",
        "omitChairIds": Array [],
        "omitPractitionerIds": Array [],
        "phoneNumber": null,
        "recallBuffer": "1 days",
        "recallEndTime": "20:00:00",
        "recallInterval": "6 months",
        "recallStartTime": "17:00:00",
        "reviewsInterval": "15 minutes",
        "sendRequestEmail": true,
        "sendUnconfirmedReviews": false,
        "suggestedChairId": null,
        "syncClientAdapter": null,
        "timeInterval": 30,
        "timezone": "America/Vancouver",
        "twilioPhoneNumber": "+16043333333",
        "unit": 15,
        "vendastaAccountId": null,
        "vendastaId": null,
        "vendastaMsId": null,
        "vendastaSrId": null,
        "website": null,
        "weeklyScheduleId": null,
      },
    },
    "addresses": Object {
      "62954242-3652-4792-bae5-5bfed53d37b7": Object {
        "city": null,
        "country": "CA",
        "id": "62954242-3652-4792-bae5-5bfed53d37b7",
        "state": null,
        "street": null,
        "timezone": null,
        "zipCode": null,
      },
    },
  },
  "result": Array [
    "62954241-3652-4792-bae5-5bfed53d37b7",
  ],
}
`;

exports[`/api/accounts GET / with owner role so return all 1`] = `
Object {
  "entities": Object {
    "accounts": Object {
      "62954241-3652-4792-bae5-5bfed53d37b7": Object {
        "EnterpriseId": null,
        "address": "62954242-3652-4792-bae5-5bfed53d37b7",
        "addressId": "62954242-3652-4792-bae5-5bfed53d37b7",
        "bookingWidgetPrimaryColor": null,
        "bumpInterval": "2 weeks",
        "callrailId": null,
        "canSendRecalls": false,
        "canSendReminders": false,
        "canSendReviews": false,
        "clinicName": null,
        "contactEmail": null,
        "destinationPhoneNumber": "+16041234567",
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "facebookUrl": null,
        "fullLogoUrl": null,
        "googlePlaceId": null,
        "hygieneInterval": "6 months",
        "id": "62954241-3652-4792-bae5-5bfed53d37b7",
        "lastSyncDate": null,
        "logo": null,
        "massOnlineEmailSentDate": null,
        "name": "Test Account",
        "omitChairIds": Array [],
        "omitPractitionerIds": Array [],
        "phoneNumber": null,
        "recallBuffer": "1 days",
        "recallEndTime": "20:00:00",
        "recallInterval": "6 months",
        "recallStartTime": "17:00:00",
        "reviewsInterval": "15 minutes",
        "sendRequestEmail": true,
        "sendUnconfirmedReviews": false,
        "suggestedChairId": null,
        "syncClientAdapter": null,
        "timeInterval": 30,
        "timezone": "America/Vancouver",
        "twilioPhoneNumber": "+16043333333",
        "unit": 15,
        "vendastaAccountId": null,
        "vendastaId": null,
        "vendastaMsId": null,
        "vendastaSrId": null,
        "website": null,
        "weeklyScheduleId": null,
      },
    },
    "addresses": Object {
      "62954242-3652-4792-bae5-5bfed53d37b7": Object {
        "city": null,
        "country": "CA",
        "id": "62954242-3652-4792-bae5-5bfed53d37b7",
        "state": null,
        "street": null,
        "timezone": null,
        "zipCode": null,
      },
    },
  },
  "result": Array [
    "62954241-3652-4792-bae5-5bfed53d37b7",
  ],
}
`;

exports[`/api/accounts GET /:accountId get the account data 1`] = `
Object {
  "entities": Object {
    "accounts": Object {
      "62954241-3652-4792-bae5-5bfed53d37b7": Object {
        "EnterpriseId": null,
        "address": "62954242-3652-4792-bae5-5bfed53d37b7",
        "addressId": "62954242-3652-4792-bae5-5bfed53d37b7",
        "bookingWidgetPrimaryColor": null,
        "bumpInterval": "2 weeks",
        "callrailId": null,
        "canSendRecalls": false,
        "canSendReminders": false,
        "canSendReviews": false,
        "clinicName": null,
        "contactEmail": null,
        "destinationPhoneNumber": "+16041234567",
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "facebookUrl": null,
        "fullLogoUrl": null,
        "googlePlaceId": null,
        "hygieneInterval": "6 months",
        "id": "62954241-3652-4792-bae5-5bfed53d37b7",
        "lastSyncDate": null,
        "logo": null,
        "massOnlineEmailSentDate": null,
        "name": "Test Account",
        "omitChairIds": Array [],
        "omitPractitionerIds": Array [],
        "phoneNumber": null,
        "recallBuffer": "1 days",
        "recallEndTime": "20:00:00",
        "recallInterval": "6 months",
        "recallStartTime": "17:00:00",
        "reviewsInterval": "15 minutes",
        "sendRequestEmail": true,
        "sendUnconfirmedReviews": false,
        "suggestedChairId": null,
        "syncClientAdapter": null,
        "timeInterval": 30,
        "timezone": "America/Vancouver",
        "twilioPhoneNumber": "+16043333333",
        "unit": 15,
        "vendastaAccountId": null,
        "vendastaId": null,
        "vendastaMsId": null,
        "vendastaSrId": null,
        "website": null,
        "weeklyScheduleId": null,
      },
    },
    "addresses": Object {
      "62954242-3652-4792-bae5-5bfed53d37b7": Object {
        "city": null,
        "country": "CA",
        "id": "62954242-3652-4792-bae5-5bfed53d37b7",
        "state": null,
        "street": null,
        "timezone": null,
        "zipCode": null,
      },
    },
  },
  "result": "62954241-3652-4792-bae5-5bfed53d37b7",
}
`;

exports[`/api/accounts GET /:accountId/configurations Getting Connector Configs 1`] = `
Object {
  "data": Array [
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of appointment sync",
        "name": "APPOINTMENT_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of patient sync",
        "name": "PATIENT_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of procedure sync",
        "name": "PROCEDURE_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The adapter type",
        "name": "ADAPTER_TYPE",
        "value": null,
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "boolean",
        "description": "Is connector enabled",
        "name": "CONNECTOR_ENABLED",
        "value": "0",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of family sync",
        "name": "FAMILY_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of chair sync",
        "name": "CHAIR_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of practitioner sync",
        "name": "PRACTITIONER_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of practitioner schedule sync",
        "name": "PRACTITIONER_SCHEDULE_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The full sync interval",
        "name": "FULL_SYNC_INTERVAL",
        "value": "300",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The quick sync interval",
        "name": "QUICK_SYNC_INTERVAL",
        "value": "20",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The cache engine",
        "name": "CACHE_ENGINE",
        "value": "REDIS",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "boolean",
        "description": "Is full sync enabled",
        "name": "FULL_SYNC_ENABLED",
        "value": "1",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "boolean",
        "description": "Is quick sync enabled",
        "name": "QUICK_SYNC_ENABLED",
        "value": "1",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "boolean",
        "description": "Turns Connector auto update functionality on or off.",
        "name": "AUTO_UPDATE_ENABLED",
        "value": "1",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of correspondence sync",
        "name": "CORRESPONDENCE_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "boolean",
        "description": "Turns bidirectional sync functionality on or off.",
        "name": "BIDIRECTIONAL_SYNC_ENABLED",
        "value": "1",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of daily schedule sync",
        "name": "DAILY_SCHEDULE_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of patient recall sync",
        "name": "PATIENT_RECALL_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "The default continuing care reasons for hygiene",
        "name": "HYGIENE_TYPES",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "The default continuing care reasons for recall",
        "name": "RECALL_TYPES",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of statuses that will be used to determine if an Appointment is confirmed",
        "name": "APPOINTMENT_CONFIRMED_STATUSES_READ",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The custom status that will be set on an Appointment when CareCru confirms it",
        "name": "APPOINTMENT_CONFIRMED_STATUS_WRITE",
        "value": "",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The custom status that will be set on an Appointment when CareCru unconfirms it",
        "name": "APPOINTMENT_UNCONFIRMED_STATUS_WRITE",
        "value": "",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of statuses that will be used to determine if an Appointment is missed",
        "name": "APPOINTMENT_MISSED_STATUSES_READ",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The custom status that will be set on an Appointment when CareCru marks it as isMissed=true",
        "name": "APPOINTMENT_MISSED_STATUS_WRITE",
        "value": "",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The custom status that will be set on an Appointment when CareCru marks it as isMissed=false",
        "name": "APPOINTMENT_UNMISSED_STATUS_WRITE",
        "value": "",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of PMS Practitioner Ids whose patients are not synced",
        "name": "IGNORED_PRACTITIONER_PMS_IDS",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The custom db url that the connector will use.",
        "name": "DB_CONNECTION_URL",
        "value": "",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of \\"hygiene\\" procedure codes",
        "name": "HYGIENE_PROCEDURE_CODES",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of \\"recall exam\\" procedure codes",
        "name": "RECALL_PROCEDURE_CODES",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of \\"new patient exam\\" procedure codes",
        "name": "NP_EXAM_PROCEDURE_CODES",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of \\"restorative\\" procedure codes",
        "name": "RESTORATIVE_PROCEDURE_CODES",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of types of the appointments that need to be synced as not bookable",
        "name": "APPOINTMENT_NOT_BOOKABLE_TYPES",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "boolean",
        "description": "Set practitioner to hygienist for hygiene appointments.",
        "name": "SET_HYGIENIST_FOR_HYGIENE_APPOINTMENT",
        "value": "0",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of Eaglesoft API url, integration key, userId and password",
        "name": "EAGLESOFT_API_CONFIGURATION",
        "value": "[]",
      },
      "type": "configuration",
    },
  ],
}
`;

exports[`/api/accounts GET /:accountId/users should fetch users for the account 1`] = `
Object {
  "entities": Object {
    "accounts": Object {
      "62954241-3652-4792-bae5-5bfed53d37b7": Object {
        "EnterpriseId": null,
        "address": Object {
          "city": null,
          "country": "CA",
          "createdAt": "2017-07-19T00:14:30.932Z",
          "deletedAt": null,
          "id": "62954242-3652-4792-bae5-5bfed53d37b7",
          "state": null,
          "street": null,
          "timezone": null,
          "zipCode": null,
        },
        "addressId": "62954242-3652-4792-bae5-5bfed53d37b7",
        "bookingWidgetPrimaryColor": null,
        "bumpInterval": "2 weeks",
        "callrailId": null,
        "canSendRecalls": false,
        "canSendReminders": false,
        "canSendReviews": false,
        "clinicName": null,
        "contactEmail": null,
        "destinationPhoneNumber": "+16041234567",
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "facebookUrl": null,
        "googlePlaceId": null,
        "hygieneInterval": "6 months",
        "id": "62954241-3652-4792-bae5-5bfed53d37b7",
        "lastSyncDate": null,
        "logo": null,
        "massOnlineEmailSentDate": null,
        "name": "Test Account",
        "omitChairIds": Array [],
        "omitPractitionerIds": Array [],
        "phoneNumber": null,
        "recallBuffer": "1 days",
        "recallEndTime": "20:00:00",
        "recallInterval": "6 months",
        "recallStartTime": "17:00:00",
        "reviewsInterval": "15 minutes",
        "sendRequestEmail": true,
        "sendUnconfirmedReviews": false,
        "suggestedChairId": null,
        "syncClientAdapter": null,
        "timeInterval": 30,
        "timezone": "America/Vancouver",
        "twilioPhoneNumber": "+16043333333",
        "unit": 15,
        "vendastaAccountId": null,
        "vendastaId": null,
        "vendastaMsId": null,
        "vendastaSrId": null,
        "website": null,
        "weeklyScheduleId": null,
      },
    },
    "permissions": Object {
      "74d4e661-1155-4494-8fdb-c4ec0ddf804d": Object {
        "allowedAccounts": null,
        "canAccessAllAccounts": true,
        "id": "74d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "permissions": null,
        "role": "OWNER",
      },
      "84d4e661-1155-4494-8fdb-c4ec0ddf804d": Object {
        "allowedAccounts": null,
        "canAccessAllAccounts": true,
        "id": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "permissions": null,
        "role": "MANAGER",
      },
    },
    "users": Object {
      "5668f250-e8c9-46e3-bfff-0249f1eec6b8": Object {
        "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "avatarUrl": null,
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "firstName": "Harvey",
        "id": "5668f250-e8c9-46e3-bfff-0249f1eec6b8",
        "lastName": "Dentest",
        "permission": "74d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "permissionId": "74d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "sendBookingRequestEmail": false,
        "username": "owner@test.com",
      },
      "6668f250-e8c9-46e3-bfff-0249f1eec6b8": Object {
        "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "avatarUrl": null,
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "firstName": "Harvey",
        "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
        "lastName": "Dentest",
        "permission": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "sendBookingRequestEmail": false,
        "username": "manager@test.com",
      },
    },
  },
  "result": Array [
    "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
    "5668f250-e8c9-46e3-bfff-0249f1eec6b8",
  ],
}
`;

exports[`/api/accounts GET /configurations Getting Connector Configs 1`] = `
Object {
  "data": Array [
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of appointment sync",
        "name": "APPOINTMENT_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of patient sync",
        "name": "PATIENT_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of procedure sync",
        "name": "PROCEDURE_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The adapter type",
        "name": "ADAPTER_TYPE",
        "value": null,
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "boolean",
        "description": "Is connector enabled",
        "name": "CONNECTOR_ENABLED",
        "value": "0",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of family sync",
        "name": "FAMILY_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of chair sync",
        "name": "CHAIR_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of practitioner sync",
        "name": "PRACTITIONER_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of practitioner schedule sync",
        "name": "PRACTITIONER_SCHEDULE_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The full sync interval",
        "name": "FULL_SYNC_INTERVAL",
        "value": "300",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The quick sync interval",
        "name": "QUICK_SYNC_INTERVAL",
        "value": "20",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The cache engine",
        "name": "CACHE_ENGINE",
        "value": "REDIS",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "boolean",
        "description": "Is full sync enabled",
        "name": "FULL_SYNC_ENABLED",
        "value": "1",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "boolean",
        "description": "Is quick sync enabled",
        "name": "QUICK_SYNC_ENABLED",
        "value": "1",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "boolean",
        "description": "Turns Connector auto update functionality on or off.",
        "name": "AUTO_UPDATE_ENABLED",
        "value": "1",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of correspondence sync",
        "name": "CORRESPONDENCE_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "boolean",
        "description": "Turns bidirectional sync functionality on or off.",
        "name": "BIDIRECTIONAL_SYNC_ENABLED",
        "value": "1",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of daily schedule sync",
        "name": "DAILY_SCHEDULE_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of patient recall sync",
        "name": "PATIENT_RECALL_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "The default continuing care reasons for hygiene",
        "name": "HYGIENE_TYPES",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "The default continuing care reasons for recall",
        "name": "RECALL_TYPES",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of statuses that will be used to determine if an Appointment is confirmed",
        "name": "APPOINTMENT_CONFIRMED_STATUSES_READ",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The custom status that will be set on an Appointment when CareCru confirms it",
        "name": "APPOINTMENT_CONFIRMED_STATUS_WRITE",
        "value": "",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The custom status that will be set on an Appointment when CareCru unconfirms it",
        "name": "APPOINTMENT_UNCONFIRMED_STATUS_WRITE",
        "value": "",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of statuses that will be used to determine if an Appointment is missed",
        "name": "APPOINTMENT_MISSED_STATUSES_READ",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The custom status that will be set on an Appointment when CareCru marks it as isMissed=true",
        "name": "APPOINTMENT_MISSED_STATUS_WRITE",
        "value": "",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The custom status that will be set on an Appointment when CareCru marks it as isMissed=false",
        "name": "APPOINTMENT_UNMISSED_STATUS_WRITE",
        "value": "",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of PMS Practitioner Ids whose patients are not synced",
        "name": "IGNORED_PRACTITIONER_PMS_IDS",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The custom db url that the connector will use.",
        "name": "DB_CONNECTION_URL",
        "value": "",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of \\"hygiene\\" procedure codes",
        "name": "HYGIENE_PROCEDURE_CODES",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of \\"recall exam\\" procedure codes",
        "name": "RECALL_PROCEDURE_CODES",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of \\"new patient exam\\" procedure codes",
        "name": "NP_EXAM_PROCEDURE_CODES",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of \\"restorative\\" procedure codes",
        "name": "RESTORATIVE_PROCEDURE_CODES",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of types of the appointments that need to be synced as not bookable",
        "name": "APPOINTMENT_NOT_BOOKABLE_TYPES",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "boolean",
        "description": "Set practitioner to hygienist for hygiene appointments.",
        "name": "SET_HYGIENIST_FOR_HYGIENE_APPOINTMENT",
        "value": "0",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of Eaglesoft API url, integration key, userId and password",
        "name": "EAGLESOFT_API_CONFIGURATION",
        "value": "[]",
      },
      "type": "configuration",
    },
  ],
}
`;

exports[`/api/accounts POST /:accountId/newUser should create and return the user 1`] = `
Object {
  "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
  "avatarUrl": null,
  "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
  "firstName": "New",
  "id": "72954241-3652-4792-bae5-5bfed53d37b7",
  "lastName": "Guy",
  "sendBookingRequestEmail": false,
  "username": "newguy@test.com",
}
`;

exports[`/api/accounts PUT /:accountId/configurations Changing Connector Configs 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "dataType": "integer",
      "description": "The quick sync interval",
      "name": "QUICK_SYNC_INTERVAL",
      "value": "30",
    },
    "type": "configuration",
  },
}
`;

exports[`/api/accounts PUT /:accoutId should update the account 1`] = `
Object {
  "entities": Object {
    "accounts": Object {
      "62954241-3652-4792-bae5-5bfed53d37b7": Object {
        "EnterpriseId": null,
        "address": "62954242-3652-4792-bae5-5bfed53d37b7",
        "addressId": "62954242-3652-4792-bae5-5bfed53d37b7",
        "bookingWidgetPrimaryColor": null,
        "bumpInterval": "2 weeks",
        "callrailId": null,
        "canSendRecalls": false,
        "canSendReminders": false,
        "canSendReviews": false,
        "clinicName": null,
        "contactEmail": null,
        "destinationPhoneNumber": "+16041234567",
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "facebookUrl": null,
        "fullLogoUrl": null,
        "googlePlaceId": null,
        "hygieneInterval": "6 months",
        "id": "62954241-3652-4792-bae5-5bfed53d37b7",
        "lastSyncDate": null,
        "logo": null,
        "massOnlineEmailSentDate": null,
        "name": "Test That Thang",
        "omitChairIds": Array [],
        "omitPractitionerIds": Array [],
        "phoneNumber": null,
        "recallBuffer": "1 days",
        "recallEndTime": "20:00:00",
        "recallInterval": "6 months",
        "recallStartTime": "17:00:00",
        "reviewsInterval": "15 minutes",
        "sendRequestEmail": true,
        "sendUnconfirmedReviews": false,
        "suggestedChairId": null,
        "syncClientAdapter": null,
        "timeInterval": 30,
        "timezone": "America/Vancouver",
        "twilioPhoneNumber": "+16043333333",
        "unit": 15,
        "vendastaAccountId": null,
        "vendastaId": null,
        "vendastaMsId": null,
        "vendastaSrId": null,
        "website": null,
        "weeklyScheduleId": null,
      },
    },
    "addresses": Object {
      "62954242-3652-4792-bae5-5bfed53d37b7": Object {
        "city": null,
        "country": "CA",
        "id": "62954242-3652-4792-bae5-5bfed53d37b7",
        "state": null,
        "street": null,
        "timezone": null,
        "zipCode": null,
      },
    },
  },
  "result": "62954241-3652-4792-bae5-5bfed53d37b7",
}
`;

exports[`/api/accounts PUT /configurations Changing Connector Configs 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "dataType": "integer",
      "description": "The quick sync interval",
      "name": "QUICK_SYNC_INTERVAL",
      "value": "30",
    },
    "type": "configuration",
  },
}
`;
